--- a/src/css/custom-editor.css
+++ b/src/css/custom-editor.css
@@ -35,3 +35,15 @@
 .Mui-active .css-z7uhs0-MuiStepConnector-line{
     border-color: #d80cf9 !important;
 }
+.css-155uwmv-MuiTableCell-root{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
+.css-udygpf-MuiTableCell-root{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
+.css-buhsbi-MuiTableCell-root{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
+.css-177samz-MuiTableCell-root{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
