--- a/src/css/custom-editor.css
+++ b/src/css/custom-editor.css
@@ -47,3 +47,9 @@
 .css-177samz-MuiTableCell-root{
     border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
 }
+.css-hfutr2-MuiSvgIcon-root-MuiSelect-icon{
+    color: #E5E9F0 !important;
+}
+.css-bpeome-MuiSvgIcon-root-MuiSelect-icon{
+    color: #E5E9F0 !important;
+}
