--- a/src/css/custom-scrollbar.css
+++ b/src/css/custom-scrollbar.css
@@ -1,14 +1,18 @@
 ::-webkit-scrollbar {
   width: 5px;
-  height: 5px;
+  background-color: #282828;
 }
 
 ::-webkit-scrollbar-track {
-  background: gray;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #282828;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: darkslategray;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
 }
 
 ::-webkit-scrollbar-thumb:hover {
