--- a/src/components/page/home/NFTs/style.css
+++ b/src/components/page/home/NFTs/style.css
@@ -1,57 +1,59 @@
-.swiper-button-next,.swiper-button-prev{
-    background: linear-gradient(45deg, #88069D 0.01%, #D0004B 97.2%);
-    border-radius: 8px !important;
-    width: 48px !important;
-    height: 48px !important;
+.swiper-button-next,
+.swiper-button-prev {
+  background: linear-gradient(45deg, #88069d 0.01%, #d0004b 97.2%);
+  border-radius: 8px !important;
+  width: 48px !important;
+  height: 48px !important;
 }
-.swiper-button-next::after,.swiper-button-prev::after{
-    font-size: 16px !important;
-    font-weight: 600  !important;
-    color: #fff;
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 16px !important;
+  font-weight: 600 !important;
+  color: #fff;
 }
 .swiper {
-    width: 85%;
+  width: 85%;
+  height: 100%;
+  position: unset !important;
+}
+@media screen and (max-width: 768px) {
+  .swiper {
+    width: 100%;
     height: 100%;
     position: unset !important;
+    border-radius: 24px !important;
   }
-  @media screen and (max-width: 768px) {
-    .swiper {
-        width: 100%;
-        height: 100%;
-        position: unset !important;
-    }
-  }
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    transition: all 0.3s ease;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
-  
-  .swiper-horizontal > .swiper-pagination-progressbar,
-  .swiper-pagination-progressbar.swiper-pagination-horizontal,
-  .swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite,
-  .swiper-vertical
-    > .swiper-pagination-progressbar.swiper-pagination-progressbar-opposite {
-    bottom: 50px !important;
-    top: unset !important;
-    width: 60% !important;
-    left: 50% !important;
-    transform: translateX(-50%) !important;
-    background: #ffffff11;
-backdrop-filter: blur(70px);
-border-radius: 100px;
-  }
- 
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  transition: all 0.3s ease;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-horizontal > .swiper-pagination-progressbar,
+.swiper-pagination-progressbar.swiper-pagination-horizontal,
+.swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite,
+.swiper-vertical
+  > .swiper-pagination-progressbar.swiper-pagination-progressbar-opposite {
+  bottom: 50px !important;
+  top: unset !important;
+  width: 60% !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  background: #ffffff11;
+  backdrop-filter: blur(70px);
+  border-radius: 100px;
+}
