--- a/src/css/custom-editor.css
+++ b/src/css/custom-editor.css
@@ -27,7 +27,7 @@
     color: #E5E9F0 !important;
 }
 .css-1vpz8fk-MuiStepLabel-label.Mui-active{
-
+    color: #d80cf9 !important;
 }
 .Mui-completed .css-z7uhs0-MuiStepConnector-line{
     border-color: #d80cf9 !important;
