--- a/src/components/Slider/style.css
+++ b/src/components/Slider/style.css
@@ -16,3 +16,29 @@
   height: 8px;
   transform: none !important;
 }
+.swiper-button-next,
+.swiper-button-prev {
+  background: linear-gradient(45deg, #88069d 0.01%, #d0004b 97.2%);
+  border-radius: 8px !important;
+  width: 48px !important;
+  height: 48px !important;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 16px !important;
+  font-weight: 600 !important;
+  color: #fff;
+}
+.swiper-navigation-disabled .swiper-button-next{
+  display: flex !important;
+  right: -24px !important;
+}
+.swiper-navigation-disabled .swiper-button-prev{
+  display: flex !important;
+  left: -24px !important;
+} 
+.swiper {
+  width: 100%;
+  height: 100%;
+  position: unset !important;
+}
